fix: 修复JDK8兼容性问题，添加单元测试
- 替换switch表达式为传统switch语句
- 替换record类型为普通类
- 替换List.of()为Arrays.asList()
- 替换var为显式类型声明
- 替换.toList()为.collect(Collectors.toList())
- 替换String.isBlank()为trim().isEmpty()
- Repository添加JpaSpecificationExecutor接口
- 拆分RuleParamDTO为多个独立文件
- 添加AuthLetterService单元测试(11个测试用例)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>